Footer Is Updated

--- a/style.css
+++ b/style.css
@@ -384,11 +384,11 @@ footer {
     position: absolute;
     top: 390vh;
     width: 100vw;
-    height: 75vh; /* Adjust as needed */
-    background-color:#F6EBF6; /* Change to desired color */
+    height: 75vh; 
+    background-color:#F6EBF6; 
 }
 .footer-section{
-    border: 2px solid black;
+  
    height: 100%;
    margin: 0 auto;
    width: 1100px;
@@ -402,6 +402,16 @@ footer {
     display: flex;
 
 }
+.zomato-footer-bottomContent p{
+color: gray;
+font-size: 17px;
+font-weight: 200;
+}
+.zomato-footer-bottomContent h4{
+    color: black;
+    font-weight: 300;
+    font-size: 20px;
+}
 #tt{
     width: 10vw;
 }
@@ -410,7 +420,71 @@ footer {
    margin: 10px;
    border-radius: 5px;
 }
-.footer-social{
-    display: grid;
-    
-}
+.zomato-footer-bottom1 {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .zomato-footer-bottomContent {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  .zomato-footer h4 {
+    font-size: 18px;
+    font-weight: normal;
+    letter-spacing: 0.1rem;
+  }
+  
+  .zomato-footer p {
+    color: rgb(136, 136, 136);
+    font-weight: 500;
+    text-transform: capitalize;
+  }
+  
+  .zomato-links {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .zomato-icon {
+    font-size: 18px;
+    color: black;
+    cursor: pointer;
+    border: 1px solid gray;
+    border-radius: 50%;
+    padding: 10px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .zomato-icon:hover {
+    background-color: gray;
+    color: white;
+  }
+  
+  .zomato-footer img {
+    width: 100px;
+  }
+  #img-ply{
+    width: 150px;
+  }
+
+
+  .zomato-footer-bottom p {
+    text-align: start;
+    color: gray;
+    font-size: 16px;
+    margin-top: 20px;
+  }
+  
+ hr {
+    margin: 20px 0px;
+    border: 1px solid #ddd;
+  }
